# openai-codex-mcp

./: .gitignore  LICENSE  README.md  README_JP.md  codex_server.py  pyproject.toml  restart_server.sh  run.sh  run_sse.sh  setup.sh  setup_and_run.sh
